--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,10 @@
 header{
   background : linear-gradient(to bottom,#FBFFB9,#FDD692);
   position: absolute;
-  height:  150px;
+  height:  200px;
   width: 100%;
   min-width: 1000px;
+  transition : .5s;
 }
 
 .head{
@@ -12,7 +13,7 @@ header{
   padding: 30px 0 30px 0;
   width: 100%;
   text-align: center;
-  font-size: 20px;
+  font-size: 50px;
 
 }
 .form{
@@ -39,8 +40,8 @@ header{
 .wrapTable{
   width: 95%;
   margin: auto;
-  padding-top: 150px;
-
+  padding-top: 200px;
+  padding-bottom: 30px;
 }
 table{
   margin: auto;
