--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ header{
   height: 56px;
   width: 200px;
   border: 2px solid rgb(169, 169, 169);
+  background-color: white;
 }
 .input{
   width: 350px;
@@ -57,7 +58,7 @@ table{
 }
 td {
   border-bottom: 1px solid #444444;
-  padding: 10px;
+  padding: 10px 5px 10px 5px;
 }
 
 body{
@@ -85,9 +86,13 @@ body{
     width: 150px;
     height: 45px;
   }
-   .scale, .nongStandard, .adress, .product, .certifications, .InspectionAgency, .collectionDay, .nongyak {
+   .scale, .num, .adress, .product, .certifications, .InspectionAgency, .collectionDay, .nongyak {
     display: none;
   }
+  thead tr td {
+    font-size: 14px;
+  }
+
   body{
     margin : 0;
     min-width: 0px;
